--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
     <!-- judul CV -->
-  <title>CV - Kayla Natasya</title>
+  <title>CV - Namira azzaahra</title>
     <!-- mengarahkan link kode ke css -->
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -15,7 +15,7 @@
     <div class="navbar">
         <ul type="square" class="list-nav">
             <li><a href="#" class="active">About</a></li>
-            <li><a href="portofolio.html">Portofolio</a></li>
+            <li><a href="portofolio.html">Portofolio.</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
       </div>
@@ -25,8 +25,8 @@
           <div id="content-img">
             <div class="content1">
                     <!-- foto profile -->
-              <img src="img/foto kayla.jpeg">
-                <h2 class="content-header">KAYLA NATASYA</h2>
+              <img src="img/foto.png">
+                <h2 class="content-header">Namira azzahra</h2>
                <p class="content-text">
                 <b>Siswa smks al washliyah 2 perdagangan</b>
                 </p>
