--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="navbar">
         <ul type="square" class="list-nav">
             <li><a href="#" class="active">About</a></li>
-            <li><a href="portofolio.html">Portofolio.</a></li>
+            <li><a href="portofolio.html">Portofolioo</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
       </div>
